--- a/hotel-front/src/app/signin/signin.component.html
+++ b/hotel-front/src/app/signin/signin.component.html
@@ -9,11 +9,11 @@
           <div class="row flex-center  mt-3 w-100">
             <div class="col-md-6 text-center text-md-left mb-5">
               <div>
-                <h2 class="h1 h1-responsive font-bold blue-text">欢迎来到实验室预约系统
+                <h2 class="h1 h1-responsive font-bold blue-text">欢迎来到酒店管理信息系统
                 </h2>
                 <hr class="hr-light">
                 <h6 class="wow fadeInLeft white-text">
-                  本系统适用于学生在线预约实验室，经由管理员审核后方可成功预约。
+                  本系统适用于用户在线预约酒店房间，酒店管理员管理酒店。
                 </h6>
                 <br>
 
