--- a/hotel-front/src/app/home/room-management/room-management.component.scss
+++ b/hotel-front/src/app/home/room-management/room-management.component.scss
@@ -10,3 +10,21 @@
 .wrong_message {
   color: #f5222d;
 }
+
+.search-box {
+  padding: 8px;
+}
+
+.search-box input {
+  width: 188px;
+  margin-bottom: 8px;
+  display: block;
+}
+
+.search-box button {
+  width: 90px;
+}
+
+.search-button {
+  margin-right: 8px;
+}
