1. 增加图片。 2. 更改登录。 3. 释放 spring security 权限。

--- a/hotel-front/src/app/home/home.component.html
+++ b/hotel-front/src/app/home/home.component.html
@@ -52,12 +52,12 @@
         <a mdbWavesEffect class="nav-link my-2 text-center" routerLink="/sidenav/teachtable"
            routerLinkActive="active">
           <mdb-icon fas icon="list-ol" class="mr-1 orange-text" size="lg"></mdb-icon>
-          教学执行计划表
+          客房入住信息表
         </a>
         <a mdbWavesEffect class="nav-link my-2 text-center" routerLink="/sidenav/apply"
            routerLinkActive="active">
           <mdb-icon fas icon="hand-point-right" class="mr-1 indigo-text" size="lg"></mdb-icon>
-          申请实验室
+          新增信息
         </a>
       </nav>
       <app-side-card></app-side-card>
@@ -84,7 +84,7 @@
                  routerLinkActive="active"><span>个人信息</span></a>
               <a mdbWavesEffect routerLink="/sidenav/updatepassword"
                  routerLinkActive="active"><span>修改密码</span></a>
-              <a mdbWavesEffect href='http://www.cqjtu.edu.cn/'><span>学校官网</span></a>
+              <a mdbWavesEffect href='http://www.cqjtu.edu.cn/'><span>回到主页</span></a>
               <a mdbWavesEffect href="" (click)="logout()"><span>退出登录</span></a>
             </div>
             <div class="my-auto">
