--- a/hotel-front/src/app/signin/signin.component.html
+++ b/hotel-front/src/app/signin/signin.component.html
@@ -115,10 +115,10 @@
                  [(ngModel)]="registerModel.userNo">
           <label for="form7">
             <mdb-icon fas icon="user" class="active mr-1"></mdb-icon>
-            学号
+            身份证号
           </label>
           <mdb-error *ngIf="registerUserFormEx.invalid && (registerUserFormEx.dirty || registerUserFormEx.touched)">
-            请输入学号
+            请输入身份证号
           </mdb-error>
         </div>
         <div class="md-form">
