1. 完成密码更改。 2. 增加会员页面。 3. 增加用户 service。

--- a/hotel-front/src/app/home/home.component.html
+++ b/hotel-front/src/app/home/home.component.html
@@ -1,27 +1,3 @@
-<!--<nz-layout>
-  <nz-affix>
-    <nz-header>
-      <h2>旅馆管理系统</h2>
-    </nz-header>
-  </nz-affix>
-  <nz-layout>
-    <nz-affix nzOffsetTop="70">
-      <nz-sider>
-        <app-sider></app-sider>
-      </nz-sider>
-    </nz-affix>
-    <nz-layout>
-      <nz-content class="content">
-        <nz-content>
-          <router-outlet></router-outlet>
-        </nz-content>
-      </nz-content>
-      <nz-footer>
-        @2019 旅馆管理系统
-      </nz-footer>
-    </nz-layout>
-  </nz-layout>
-</nz-layout>-->
 <div class="container-fluid">
   <div class="row rgba-grey-slight">
     <!-- 左侧栏 -->
@@ -29,32 +5,47 @@
       <nav class="nav nav-pills flex-column light-blue lighten-5 mt-1 z-depth-2">
         <a class="nav-link my-1 font-weight-bold flex-center mt-3 mb-3" style="font-size: large">酒店管理信息系统</a>
         <a class=" unique-color-dark a1 "></a>
-        <a class="nav-link my-2 text-center " mdbWavesEffect routerLink="login"
+        <a *appHasRole="'ADMIN'" class="nav-link my-2 text-center " mdbWavesEffect routerLink="login"
            routerLinkActive="active">
           <mdb-icon fas icon="chalkboard-teacher" class="mr-1 amber-text" size="lg"></mdb-icon>
           登记
         </a>
-        <a mdbWavesEffect class="nav-link text-center my-2" routerLink="logout"
+        <a *appHasRole="'USER'" class="nav-link my-2 text-center " mdbWavesEffect routerLink="login"
+           routerLinkActive="active">
+          <mdb-icon fas icon="chalkboard-teacher" class="mr-1 amber-text" size="lg"></mdb-icon>
+          预定
+        </a>
+        <a *appHasRole="'USER'" class="nav-link my-2 text-center " mdbWavesEffect routerLink="login"
+           routerLinkActive="active">
+          <mdb-icon fas icon="chalkboard-teacher" class="mr-1 amber-text" size="lg"></mdb-icon>
+          我的订单
+        </a>
+        <a *appHasRole="'USER'" class="nav-link my-2 text-center " mdbWavesEffect routerLink="login"
+           routerLinkActive="active">
+          <mdb-icon fas icon="chalkboard-teacher" class="mr-1 amber-text" size="lg"></mdb-icon>
+          我的订单
+        </a>
+        <a *appHasRole="'ADMIN'" mdbWavesEffect class="nav-link text-center my-2" routerLink="logout"
            routerLinkActive="active">
           <mdb-icon fas icon="scroll" class="mr-1 cyan-text" size="lg"></mdb-icon>
           退房
         </a>
-        <a mdbWavesEffect class="nav-link text-center my-2 " routerLink="roomManagement"
+        <a *appHasRole="'ADMIN'" mdbWavesEffect class="nav-link text-center my-2 " routerLink="roomManagement"
            routerLinkActive="active">
           <mdb-icon fas icon="cloud-upload-alt" class="mr-1 " size="lg"></mdb-icon>
           客房信息管理
         </a>
-        <a mdbWavesEffect class="nav-link my-2 text-center" routerLink="customerManagement"
+        <a *appHasRole="'ADMIN'" mdbWavesEffect class="nav-link my-2 text-center" routerLink="/home/customerManagement"
            routerLinkActive="active">
           <mdb-icon fas icon="edit" class="mr-1 green-text" size="lg"></mdb-icon>
           客人信息管理
         </a>
-        <a mdbWavesEffect class="nav-link my-2 text-center" routerLink="/sidenav/teachtable"
+        <a *appHasRole="'ADMIN'" mdbWavesEffect class="nav-link my-2 text-center" routerLink="/home/memberManagement"
            routerLinkActive="active">
           <mdb-icon fas icon="list-ol" class="mr-1 orange-text" size="lg"></mdb-icon>
-          客房入住信息表
+          会员信息表
         </a>
-        <a mdbWavesEffect class="nav-link my-2 text-center" routerLink="/sidenav/apply"
+        <a *appHasRole="'ADMIN'" mdbWavesEffect class="nav-link my-2 text-center" routerLink="/sidenav/apply"
            routerLinkActive="active">
           <mdb-icon fas icon="hand-point-right" class="mr-1 indigo-text" size="lg"></mdb-icon>
           新增信息
@@ -80,9 +71,9 @@
             </div>
 
             <div class='ribbon mx-auto mb-2'>
-              <a mdbWavesEffect routerLink="/sidenav/personalinfo"
+              <a mdbWavesEffect routerLink="/home/personalinfo"
                  routerLinkActive="active"><span>个人信息</span></a>
-              <a mdbWavesEffect routerLink="/sidenav/updatepassword"
+              <a mdbWavesEffect routerLink="/home/updatepassword"
                  routerLinkActive="active"><span>修改密码</span></a>
               <a mdbWavesEffect href='http://www.cqjtu.edu.cn/'><span>回到主页</span></a>
               <a mdbWavesEffect href="" (click)="logout()"><span>退出登录</span></a>
