--- a/hotel-front/src/app/home/login/login.component.html
+++ b/hotel-front/src/app/home/login/login.component.html
@@ -1,4 +1,27 @@
 <form nz-form [formGroup]="validateForm" (ngSubmit)="submitForm($event)">
+
+  <nz-form-item>
+    <nz-form-label [nzSpan]="7" nzRequired>身份证号</nz-form-label>
+    <nz-form-control [nzSpan]="12" nzHasFeedback>
+      <input nz-input formControlName="idCard" placeholder="客人身份证编号" maxlength="18" #idCardBox
+             (ngModelChange)="searchIdCard(idCardBox.value)" [nzAutocomplete]="autoIdCardList"
+             [(ngModel)]="idCardSelected">
+      <nz-autocomplete nzBackfill #autoIdCardList>
+        <nz-auto-option *ngFor="let each of userListSlice" [nzValue]="each.idCard">
+          <p><span>{{each.idCard}}</span></p>
+        </nz-auto-option>
+      </nz-autocomplete>
+      <nz-form-explain *ngIf="validateForm.get('idCard').dirty && validateForm.get('idCard').errors">
+        <ng-container *ngIf="validateForm.get('idCard').hasError('wrong')">
+          请填写有效身份证编号!
+        </ng-container>
+        <ng-container *ngIf="validateForm.get('idCard').hasError('required')">
+          请填写客人身份证号!
+        </ng-container>
+      </nz-form-explain>
+    </nz-form-control>
+  </nz-form-item>
+
   <nz-form-item>
     <nz-form-label [nzSpan]="7" nzRequired>姓名</nz-form-label>
     <nz-form-control [nzSpan]="12" nzHasFeedback>
@@ -13,27 +36,6 @@
         </ng-container>
         <ng-container *ngIf="validateForm.get('name').pending">
           校验中....
-        </ng-container>
-      </nz-form-explain>
-    </nz-form-control>
-  </nz-form-item>
-
-  <nz-form-item>
-    <nz-form-label [nzSpan]="7" nzRequired>身份证号</nz-form-label>
-    <nz-form-control [nzSpan]="12" nzHasFeedback>
-      <input nz-input formControlName="idCard" placeholder="客人身份证编号" maxlength="18" #idCardBox
-             (input)="searchIdCard(idCardBox.value)" [nzAutocomplete]="autoIdCardList" [(ngModel)]="idCardSelected">
-      <nz-autocomplete nzBackfill #autoIdCardList>
-        <nz-auto-option *ngFor="let each of userListSlice" [nzValue]="each.idCard">
-          <p><span>{{each.idCard}}</span></p>
-        </nz-auto-option>
-      </nz-autocomplete>
-      <nz-form-explain *ngIf="validateForm.get('idCard').dirty && validateForm.get('idCard').errors">
-        <ng-container *ngIf="validateForm.get('idCard').hasError('wrong')">
-          请填写有效身份证编号!
-        </ng-container>
-        <ng-container *ngIf="validateForm.get('idCard').hasError('required')">
-          请填写客人身份证号!
         </ng-container>
       </nz-form-explain>
     </nz-form-control>
