--- a/hotel-front/src/app/home/home.component.html
+++ b/hotel-front/src/app/home/home.component.html
@@ -76,7 +76,7 @@
               <a mdbWavesEffect routerLink="/home/updatepassword"
                  routerLinkActive="active"><span>修改密码</span></a>
               <a mdbWavesEffect routerLink="index"><span>回到主页</span></a>
-              <a mdbWavesEffect href="" (click)="logout()"><span>退出登录</span></a>
+              <a mdbWavesEffect routerLink="/"><span>退出登录</span></a>
             </div>
             <div class="my-auto">
 
