--- a/hotel-front/src/app/home/home.component.html
+++ b/hotel-front/src/app/home/home.component.html
@@ -15,7 +15,7 @@
           <mdb-icon fas icon="chalkboard-teacher" class="mr-1 amber-text" size="lg"></mdb-icon>
           预定
         </a>
-        <a *appHasRole="'USER'" class="nav-link my-2 text-center " mdbWavesEffect routerLink="myBook"
+        <a *appHasRole="'USER'" class="nav-link my-2 text-center " mdbWavesEffect routerLink="my-book"
            routerLinkActive="active">
           <mdb-icon fas icon="chalkboard-teacher" class="mr-1 amber-text" size="lg"></mdb-icon>
           我的订单
@@ -40,15 +40,15 @@
           <mdb-icon fas icon="edit" class="mr-1 green-text" size="lg"></mdb-icon>
           客人信息管理
         </a>
-        <a *appHasRole="'ADMIN'" mdbWavesEffect class="nav-link my-2 text-center" routerLink="/home/memberManagement"
+        <a *appHasRole="'ADMIN'" mdbWavesEffect class="nav-link my-2 text-center" routerLink="/home/my-book"
            routerLinkActive="active">
           <mdb-icon fas icon="list-ol" class="mr-1 orange-text" size="lg"></mdb-icon>
-          会员信息表
+          我的预定
         </a>
-        <a *appHasRole="'ADMIN'" mdbWavesEffect class="nav-link my-2 text-center" routerLink="/sidenav/apply"
+        <a *appHasRole="'ADMIN'" mdbWavesEffect class="nav-link my-2 text-center" routerLink="/home/audit"
            routerLinkActive="active">
           <mdb-icon fas icon="hand-point-right" class="mr-1 indigo-text" size="lg"></mdb-icon>
-          新增信息
+          预约审核
         </a>
       </nav>
       <app-side-card></app-side-card>
